# craby-city

./: Cargo.toml  Dockerfile  docker-compose.yml
.github/: pull_request.json  release.yaml
.github/workflows/: build-and-push.yml  linting.yml  push.yaml  release-prod.yml  release-staging.yml  release.yaml  tests.yml
argo/: application.yaml  project.yaml
configs/: prometheus.yml
helm/: Chart.yaml  tag.yaml  values.yaml
helm/templates/: Deployment.yaml
kubernetes/helm/app/templates/: deployment.yml
kubernetes/helm/infrastructure/: Chart.yaml  values.yaml
kubernetes/helm/infrastructure/templates/: ingress-api.yml  registry-creds.yml
kubernetes/helmfiles/: helmfile.yml
kubernetes/helmfiles/develop/: values.yml
kubernetes/helmfiles/staging/: helmfile.yml  values.yml
migrations/: 20240603115406_init.down.sql
sql/: tables.sql  up.sh
src/: main.rs
src/city/: city_controller.rs  city_service.rs  mod.rs  model.rs
src/health/: health_controller.rs  health_service.rs  mod.rs
src/tests/: city_integration_test.rs  mod.rs
src/tests/fixtures/: clean.sql
