[package]
name = "craby-city"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
dotenv = "0.15.0"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-async-std"]}
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.199", features = ["derive"] }
env_logger = "0.11.3"
